--- a/code/05-Recommender_built-.ipynb
+++ b/code/05-Recommender_built-.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# Recommender : Built\n",
     "\n",
-    "In the notebook, we will make use of the concept used to build model 2 (using `genre`, `categories`, `language`, `description` and `weighted average`) and take a fraction of the games that we have to build the recommender using streamlit. "
+    "In the notebook, we will make use of the concept used to build model 2 (using `genre`, `categories`, `language`, `description` and `weighted average`). \n",
+    "\n",
+    "We will build a recommender using games that are still being played for the last 2 weeks (at point of extraction, Feb 2022), i.e. for games that have `average_2weeks` > 0 and take a fraction of the games that we have to build the recommender using streamlit. \n",
+    "\n"
    ]
   },
   {
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "4731e7de-b40b-4991-b504-23508796eb6f",
    "metadata": {},
    "outputs": [],
@@ -466,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "239f6508-3657-4cfa-8a66-1f1cafb5e65b",
    "metadata": {},
    "outputs": [
@@ -493,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9f714f72-b431-43f6-af53-40ced879a565",
    "metadata": {},
    "outputs": [
@@ -900,7 +903,7 @@
        "[5 rows x 3000 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "38cdcde7-c604-4f5e-8c2d-56e761e68c4d",
    "metadata": {},
    "outputs": [],
@@ -934,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0e45f4ce-4421-4146-ad48-4d6b327df80d",
    "metadata": {},
    "outputs": [],
@@ -953,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "bb9bbdd0-19e0-41e7-92e6-1db7282451fd",
    "metadata": {},
    "outputs": [],
@@ -971,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "20082aea-80e4-4fde-a099-7c402d9d0fc5",
    "metadata": {},
    "outputs": [],
@@ -989,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "4d578433-2701-4e19-80bd-75f6ea28fd74",
    "metadata": {},
    "outputs": [],
@@ -1017,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "710145f2-1e3c-457b-af14-5b3b2a82aa24",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "5d22be7a-249d-4196-bcce-6b2b696892f8",
    "metadata": {},
    "outputs": [],
@@ -1066,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "8ab53281-827a-46fa-9d44-ae8d5134cb1c",
    "metadata": {},
    "outputs": [
@@ -1297,7 +1300,7 @@
        "[2 rows x 3103 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "8763b691-be4f-4a62-abbf-f32f653ed6a0",
    "metadata": {},
    "outputs": [],
@@ -1333,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "b0c6eacb-b7e3-45a3-8b02-627a66c710be",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 175 ms\n"
+      "Wall time: 167 ms\n"
      ]
     }
    ],
@@ -1354,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "95d43b33-9b03-4c5e-bd75-bb86ff844bea",
    "metadata": {},
    "outputs": [],
@@ -1377,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "5dc8d37a-4221-49f9-8253-d419af235fce",
    "metadata": {},
    "outputs": [
@@ -1475,7 +1478,7 @@
        "9                          Left 4 Dead  0.118897"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1487,7 +1490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "968240b5-d57e-43be-ab6e-4c3642654ea5",
    "metadata": {},
    "outputs": [
@@ -1585,7 +1588,7 @@
        "989                       TAPSONIC BOLD  0.189737"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "6298e92f-d4c6-4b52-baa6-7cbd0faa13e0",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1698,7 @@
        "439                       rFactor 2  0.114403"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1707,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "de718077-28b8-4330-9e47-c12fae8839bb",
    "metadata": {},
    "outputs": [
@@ -1805,7 +1808,7 @@
        "1111                    Ratropolis  0.072847"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,17 +1842,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "a6c15d3b-1e06-40be-a2b7-4bebe495d742",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create new dataframe to store\n",
     "sql_query = '''\n",
-    "SELECT main.steam_appid, main.name, media.header_image\n",
+    "SELECT main.steam_appid, main.name, media.header_image, description.about_the_game\n",
     "FROM main\n",
     "INNER JOIN media\n",
     "    ON main.steam_appid = media.steam_appid\n",
+    "INNER JOIN description\n",
+    "    ON main.steam_appid = description.steam_appid\n",
     "INNER JOIN statistics\n",
     "   ON main.steam_appid = statistics.steam_appid\n",
     "WHERE (statistics.average_2weeks > 0)\n",
@@ -1868,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "a4c3a59a-c9ab-4a1a-bfd9-a81bfcae76af",
    "metadata": {},
    "outputs": [],
