--- a/code/05-Recommender_built-.ipynb
+++ b/code/05-Recommender_built-.ipynb
@@ -1344,7 +1344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 167 ms\n"
+      "Wall time: 130 ms\n"
      ]
     }
    ],
@@ -1879,8 +1879,9 @@
    "outputs": [],
    "source": [
     "# storing the df\n",
-    "pd.DataFrame(df_model_two).to_csv(\"../data/cos_sim_data_extract.csv\", index=False)\n",
-    "df_store.to_csv(\"../data/details_data_extract.csv\", index=False)"
+    "# pd.DataFrame(df_model_two).to_csv(\"../data/cos_sim_data_extract.csv\", index=False)\n",
+    "df_store.to_csv(\"../data/details_data_extract.csv\", index=False)\n",
+    "pd.DataFrame(cos_sim_two).to_csv(\"../data/cos_sim_extract.csv\", index=False)"
    ]
   },
   {
